--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,1 @@
-<!--The content below is only a placeholder and can be replaced.-->
-<div style="text-align:center" hidden>
-  <h1>
-    Welcome to {{ title }}!
-  </h1>
-</div>
+<app-box-picker></app-box-picker>
