--- a/src/styles.sass
+++ b/src/styles.sass
@@ -2,3 +2,10 @@
 body
     :margin 0
     :overflow hidden
+    :height 100%
+
+app-root
+  height: 100%
+  width: 100%
+  z-index: 1
+  position: absolute
