--- a/src/app/blocker/blocker.component.html
+++ b/src/app/blocker/blocker.component.html
@@ -1,5 +1,6 @@
-<div id="instructions">
-  <span>Click to play</span>
-  <br/>
+<div class="instruction-1">
+  Click to play
+</div>
+<div class="instruction-2">
   (W, A, S, D = Move, SPACE = Jump, MOUSE = Look around)
 </div>
