--- a/src/app/box-picker/box-picker.component.html
+++ b/src/app/box-picker/box-picker.component.html
@@ -1,4 +1,6 @@
 <app-box-item *ngFor="let color of colors"
               [color]="color"
-              (click)="selectColor(color)">
+              (click)="selectColor(color)"
+              class="clickable"
+>
 </app-box-item>
