--- a/src/app/box-picker/box-picker.component.sass
+++ b/src/app/box-picker/box-picker.component.sass
@@ -1,9 +1,11 @@
 @import '../../theme/variables'
 
 \:host
-  padding-top: 50px
-  padding-left: 70px
-  height: calc(100% - 50px)
-  width: $face-width + $box-padding
   display: flex
   flex-direction: column
+  background-color: $color-blocker-background
+  justify-content: center
+  align-items: center
+
+.clickable
+  cursor: pointer
