--- a/src/app/blocker/blocker.component.sass
+++ b/src/app/blocker/blocker.component.sass
@@ -1,9 +1,17 @@
-\:host
-  position: absolute
-  width: 100%
-  height: 100%
-  background-color: rgba(0,0,0,0.5)
+@import '../../theme/variables'
 
-#instructions
-  width: 100%
-  height: 100%
+\:host
+  cursor: pointer
+  color: white
+  text-align: center
+  display: flex
+  justify-content: center
+  align-items: center
+  flex-direction: column
+  background-color: $color-blocker-background
+
+.instruction-1
+  font-size: 35px
+
+.instruction-2
+  font-size: 18px
