added websocket client

--- a/src/app/box-picker/box-item/box-item.component.html
+++ b/src/app/box-picker/box-item/box-item.component.html
@@ -1,4 +1,4 @@
-<div class="box-faces" [style.backgroundColor]="color">
+<div class="box-faces" [style.backgroundColor]="formatHex(color)">
   <div class="box-face box-face--is-front">&nbsp;</div>
   <div class="box-face box-face--is-back">&nbsp;</div>
   <div class="box-face box-face--is-top">&nbsp;</div>
